<resources>
    <string name="appName">GTD</string>

    <string name="groupsTabLayoutDesc">Groups tabs</string>
    <string name="newGroupSheetHeader">new group</string>
    <string name="newGroupTitleInputHint">title</string>

    <string name="groupDialogSubmitBtnDesc">Edit group</string>
    <string name="groupDialogCloseBtnDesc">Cancel group editing</string>
    <string name="groupDialogHeader">EDIT GROUP</string>
    
    <string name="newTaskFabDesc">Create new task</string>
    <string name="newTaskSheetHeader">new task</string>
    <string name="newTaskTitleInputHint">title</string>
    <string name="newTaskDescInputHint">description</string>
    <string name="createBtnText">create</string>
    <string name="taskStarDesc">Add task to starred</string>
    
    <string name="taskDialogSubmitBtnDesc">Edit task</string>
    <string name="taskDialogCloseBtnDesc">Cancel task editing</string>
    <string name="taskDialogHeader">EDIT TASK</string>
    <string name="subtasksHeader">subtasks</string>

    <string name="menuItemNewGroupDesc">New group</string>
    <string name="menuItemEditGroupDesc">Edit group</string>
    <string name="menuItemOnlyStarredTasksDesc">Filter starred tasks</string>
    <string name="menuItemOnlyUncompletedTasksDesc">Filter uncompleted tasks</string>

    <string name="moveToTrash">move to trash</string>
</resources>
