<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/newGroupBtn"
            android:icon="@drawable/baseline_close_32"
            android:title="@string/menuItemNewGroupDesc"
            app:showAsAction="collapseActionView"/>

        <item
            android:id="@+id/editGroupBtn"
            android:icon="@drawable/baseline_close_32"
            android:title="@string/menuItemEditGroupDesc" />

        <item
            android:id="@+id/onlyStarredFilter"
            android:icon="@drawable/baseline_close_32"
            android:title="@string/menuItemOnlyStarredTasksDesc" />

        <item
            android:id="@+id/onlyUncompletedFilter"
            android:icon="@drawable/baseline_close_32"
            android:title="@string/menuItemOnlyUncompletedTasksDesc" />


</menu>